# platformer_cpp_sfml

platformer_sln/platformer/: CMakeLists.txt  ComplexFields.h  ControlCollision.h  Global.h  Hero.cpp  Hero.h  ObjectMapa.h  OwnGCF.cpp  OwnGCF.h  ParametrsGame.h  Physics.h  SetStruct.h  bullet.h  platformer.cpp  usefull_sfml.cpp  usefull_sfml.h
